force-app/main/default/objects/SVMXA360__CONF_TagTranslation__c/SVMXA360__CONF_TagTranslation__c.object-meta.xml
<CustomObject>
    <description>Stores the translated value of the ServiceMax config object&apos;s tags/labels.</description>
    <label>Tag Translation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Language</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>