force-app/main/default/objects/SVMXA360__CONF_TagTranslation__c/fields/SVMXA360__CONF_ServicemaxTag__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CONF_ServicemaxTag__c</fullName>
    <description>This field is a lookup to Servicemax Tag object which stores master texts</description>
    <label>Servicemax Tag</label>
    <referenceTo>SVMXA360__CONF_ServicemaxTags__c</referenceTo>
    <relationshipLabel>Tag Translations</relationshipLabel>
    <relationshipName>CONF_TagTranslations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>