force-app/main/default/objects/SVMXA360__CONF_TagTranslation__c/fields/SVMXA360__LanguageUniqueId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LanguageUniqueId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Language Unique Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>