force-app/main/default/objects/SVMXA360__CONF_TagTranslation__c/fields/SVMXA360__Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Value__c</fullName>
    <description>This field holds the translated value.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the translated value.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>